# artificial-algorand-contract

./: .gitignore  README.md  algorand-settings.json  pyproject.toml  sss.json  test-accs.md  tmp.py
ART-asset/: algo_acc.py  asset.py  asset_example.py  typed_algosdk.py
RTE-asset/: asset.py  creat-acc.py
algo-builder-tester/: algob.config.js  package.json  price_verifier.teal
algo-builder-tester/assets/: algob-tester.py  asa.yaml  price-verifier.py  stable_asa.yaml  teal-test.teal
algo-builder-tester/test/: algob-tester.ts  sample-test.ts  teal-test.ts  v5counter-test.ts  v5escrow-test.ts  v5stake-test.ts  v6trade-test.ts
archived-python-sdk/: __secrets__.py  algorand-settings.json
archived-python-sdk/ART-asset/: asset.py  asset_example.py
archived-python-sdk/helper/: __secrets__.py  algo_acc.py  getClient.py
artificial_algorand_contract/: __init__.py  __main__.py  exporter.py  fulltest.py  global_state.py  resources.py  tester.py  tests.py
artificial_algorand_contract/classes/: account.py  algo_config.py  algorand.py  asset.py  teal_tester.py  tester.py
artificial_algorand_contract/counter/: __init__.py  counter_contract.py
artificial_algorand_contract/escrow/: __init__.py  escrow_contract.py
artificial_algorand_contract/helper/: __secrets__.py  contract_helper.py  external.py  global_state.py  global_status.py  transaction_helper.py  typed_algosdk.py
artificial_algorand_contract/stake/: __init__.py  stake_contract.py
artificial_algorand_contract/trade/: asset_config.py  (+2 more)
docs/: CONTRUBUTE.md  MEMO.md  algorand-art-mint-SC.drawio  cheap_eco_model_test.ts  mint_psuedo_code.py  trade_psuedo_code.py
helper/: algo_acc.py  genClient.py
output/: approval.teal
tests/: test_artificial_algorand_contract.py
(+10 files in other folders)
