[tool.poetry]
authors = ["Pablion <36828324+Pablion@users.noreply.github.com>"]
description = "Artificial Algorand contract"
name = "artificial-algorand-contract"
version = "0.0.1"

[tool.poetry.dependencies]
pyteal = {extras = ["all"], version = "^0.9.1"}
python = "^3.10"
python-dotenv = "^0.19.2"
black = "^22.1.0"
symmetric-secret-share = "^0.0.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^22.1.0", allow-prereleases = true}

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
